--- a/app/views/questions_controller/ask.html.erb
+++ b/app/views/questions_controller/ask.html.erb
@@ -1,2 +1,7 @@
-<h1>QuestionsController#ask</h1>
-<p>Find me in app/views/questions_controller/ask.html.erb</p>
+
+
+<p>Ask your coach anything:</p>
+<form action="/answer" method="get">
+  <input type="text" name="question">
+  <input type="submit" value="Ask!">
+</form>
