--- a/app/views/questions_controller/ask.html.erb
+++ b/app/views/questions_controller/ask.html.erb
@@ -2,6 +2,6 @@
 
 <p>Ask your coach anything:</p>
 <form action="/answer" method="get">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
+  <input type="text" name="question" id="input">
+  <input type="submit" value="Ask!" id="submit">
 </form>
